	  socket is disconnected.  When the app calls recvfrom, the socket is
	  already disconnected and the buffered data is stranded.  Now, recvfrom
	  will continue to return success after the socket is disconnected until
	  the readahead buffer is drained.
	* olimex-lp1766stk/ftpc/defconfig: Many configurations have the MTU 
	  (CONFIG_NET_BUFSIZE) set to very small numbers, less then the minimum
	  MTU size that must be supported -- 576. This can cause problems in
	  some networks:  CONFIG_NET_BUFSIZE should be set to at least 576 in
	  all defconfig files.  This has only been fixed in this defconfig file.

6.5 2011-06-21 Gregory Nutt <spudmonkey@racsa.co.cr>

	* arch/avr/src/avr and arch/avr/include/avr: Adds general support for
	  the Atmel 8-bit AVR family.
	* arch/avr/src/atmega and arch/avr/include/atmega: Adds support for the
	  Atmel AVR ATMega family.
	* arch/avr/src/at90usb and arch/avr/include/at90usb: Adds support for the
	  Atmel AVR AT90USB family.
	* configs/micropendous3: Adds a board configuration for the Opendous
	  Micropendous 3 board.  This board may be populated with several different
	  members of the Atmel AVR AT90USB family.
	* configs/amber: This is a placehold for the Atmel ATMega128 Amber Web
	  Server from SoC Robotics.  Not much present in this directory on initial
	  check-in.
	* configs/teensy: Adds a board configuration for the PJRC Teensy++ 2.0 board
	  that features an Atmel AT90USB1286 MCU.
	* fs/fat: Offsets, sector numbers, etc. need to be off_t, not size_t.  size_t
	  is intended to be the maximum size of a memory object, not a file offset. This
	  does not make any difference except on systems (like the AVR) where size_t
	  is only 16-bits.

6.6 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* drivers/mtd/ramtron.c, net/net_checksd.c, fs/fs_fdopen.c, and include/nuttx/mii.h:
	  Several structural changes made to get a clean compile under the ez80 ZDS-II
      toolchain (no design changes).
